--- a/src/app/pages/suppliers/suppliers/suppliers.component.html
+++ b/src/app/pages/suppliers/suppliers/suppliers.component.html
@@ -1,17 +1,21 @@
 <div class="container">
+  <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Manage Suppliers</h2>
-    <button class="btn btn-success mb-3" (click)="addSupplier()">Add New Supplier</button>
-    <div class="row">
-      <div *ngFor="let supplier of suppliers" class="col-md-4">
-        <div class="card mb-4">
+    <button class="btn btn-success" (click)="addSupplier()">Add New Supplier</button>
+    <button type="button" class="btn btn-secondary" (click)="goBack()">Back</button>
+  </div>
+  <div class="row">
+    <div *ngFor="let supplier of suppliers" class="col-md-4">
+      <div class="card mb-4">
+        <div class="img-container">
           <img [src]="supplier.supplierImage" class="card-img-top" alt="{{ supplier.name }}">
-          <div class="card-body">
-            <h5 class="card-title">{{ supplier.name }}</h5>
-            <button class="btn btn-primary" (click)="editSupplier(supplier)">Edit</button>
-            <button class="btn btn-danger" (click)="deleteSupplier(supplier.supplierId)">Delete</button>
-          </div>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">{{ supplier.name }}</h5>
+          <button class="btn btn-primary" (click)="editSupplier(supplier)">Edit</button>
+          <button class="btn btn-danger" (click)="deleteSupplier(supplier.supplierId)">Delete</button>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
